gen-ai-playground/manifests/backend/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gen-ai-mongo-deployment
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: gen-ai-mongo
  template:
    metadata:
      labels:
        app: gen-ai-mongo
    spec:
      containers:
        - name: mongo
          image: docker.io/mongo:8.2.7
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: gen-ai-volume
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "50m"
      volumes:
        - name: gen-ai-volume
          persistentVolumeClaim:
            claimName: gen-ai-claim

---

apiVersion: v1
kind: Service
metadata:
  name: gen-ai-mongo-svc
spec:
  selector:
    app: gen-ai-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
