gen-ai-playground/manifests/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gen-ai-backend-svc
spec:
  selector:
    app: gen-ai-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
