gen-ai-playground/manifests/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gen-ai-backend-route
spec:
  to:
    kind: Service
    name: gen-ai-backend-svc
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
